Fix alignment issues in design

--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -117,7 +117,7 @@ main {
 
       .input_wrapper {
         display: flex;
-        height: 200px;
+        height: 150px;
 
         .email__wrapper {
           height: 150px;
@@ -131,7 +131,7 @@ main {
           }
 
           .email {
-            margin-bottom: 95px;
+            margin-bottom: 45px;
           }
 
           #email {
@@ -161,7 +161,7 @@ main {
 
         .title__wrapper {
           height: 150px;
-          margin-left: 345px;
+          margin-left: 120px;
           text-align: left;
           flex-direction: row;
 
@@ -172,7 +172,7 @@ main {
           }
 
           .title {
-            margin-bottom: 55px;
+            margin-bottom: 45px;
           }
 
           #title {
